--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>edition bohemica</title>
+    <meta name="description"
+          content="Offizieller Online-Shop und Internetpräsenz des Verlages edition bohemica">
+    <meta property="og:title" content="edition bohemica">
+    <meta property="og:site_name" content="edition bohemica">
+    <meta property="og:url" content="https://editionbohemica.de">
+    <meta property="og:description"
+          content="Offizieller Online-Shop und Internetpräsenz des Verlages edition bohemica">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://edition-bohemica.de/logo.jpg">
 
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -30,8 +39,8 @@
         // End Rollbar Snippet
     </script>
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
-</script> 
-    
+</script>
+
 </head>
 <body>
     <div id="app"></div>
